--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,12 @@ a {
 a:hover {
   color: #fe635f;
 }
+
+
+@media only screen and (max-width: 40em) {
+  a {
+    color: #fe635f;
+    font-size: 28px;
+    margin: 0 15px;
+  }
+}
