made the video popup a function added the replay video text button on the close of the initial video popup =)

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@ a:hover {
   color: #fe635f;
 }
 
+#play {
+  color: #fe635f;
+  cursor: pointer;
+  font-weight: bold;
+}
 
 @media only screen and (max-width: 40em) {
   a {
